Сверстан блок остались вопросы

--- a/src/index.html
+++ b/src/index.html
@@ -426,6 +426,20 @@
   </div>
 </div>
 </section>
+<section class="section something">
+  <div class="container">
+    <div class="something-block">
+      <div class="something-image">
+        <img src="img/something-image.png" alt="Остались вопросы?">
+      </div>
+      <div class="something-ask">
+        <div class="something-ask__title header-title">Если остались вопросы</div>
+        <div class="something-ask__subtitle header-description">Оставьте нам свои контакты, мы перезвоним и ответим. Обещаем не забрасывать вас рекламными рассылками и спамом, если вдруг вы закажите ремонт не у нас. Мы уважаем вас.</div>
+        <div class="something-ask__button button">Задать вопрос</div>
+      </div>
+    </div>
+  </div>
+</section>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
