Сверстана и адаптирована карта сайта

--- a/src/index.html
+++ b/src/index.html
@@ -440,6 +440,18 @@
     </div>
   </div>
 </section>
+<section class="adress">
+  <div class="adress-contacts">
+    <div class="adress-contacts__title">Позвоните нам <br> или приходите в офис</div>
+    <div class="adress-contacts__location">Москва, Проспект Мира 64,<br> офис 205, 2 этаж налево</div>
+    <div class="adress-contacts__time">Режим работы в будни<br> с 9.00 до 20.00</div>
+    <div class="adress-contacts__telephone"><a href="tel:74993981882">8 499 398-18-82</a></div>
+    <button class="adress-contacts__button button">Заказать звонок</button>
+  </div>
+  <div class="adress-map">
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2ccc9a59a523273b61271609252ca864726343f7d8a079a2e4af7ab9b7d26b3d&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false"></script>
+  </div>  
+</section>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
