--- a/src/index.html
+++ b/src/index.html
@@ -452,6 +452,19 @@
     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2ccc9a59a523273b61271609252ca864726343f7d8a079a2e4af7ab9b7d26b3d&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=false"></script>
   </div>  
 </section>
+<section class="section footer">
+  <div class="container">
+    <div class="footer-block">
+      <div class="footer-logo">
+        <img src="img/logo-white.svg" alt="" class="footer-logo__img">
+        <div class="footer-logo__text">Remont</div>
+      </div>
+      <div class="footer__politics">
+        <a href="#" class="footer__politics-url">Политика конфиденциальности</a></div>
+      <div class="footer__telephone"> <a href="tel:74993981882">+7 499 398 18 82</a></div>
+    </div>
+  </div>
+</section>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
