Обновлен gulpfile, исправлены ошибки из поста на стене ВКонтакте

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <a href="#reviews" class="navbar-menu__item">Отзывы</a>
         <a href="#contacts" class="navbar-menu__item">Контакты</a>
     </div>
-    <div class="navbar-contacts"><a href="tel:84993981882" class="navbar-contacts__tel">+7 499 398 18 82</a></div>
+    <div class="navbar-contacts"><a href="tel:+74993981882" class="navbar-contacts__tel">+7 499 398 18 82</a></div>
     </div>
   </div>
 </nav>
@@ -39,7 +39,7 @@
               <div class="hero-list__image">
                 <img src="img/hero/platen.svg" alt="">
               </div>
-              <div class="hero-list__text">Цены <br> от 3 000 руб/м</div>
+              <div class="hero-list__text">Цены <br> от 2 000 руб/м</div>
             </li>
             <li class="hero-list__item">
               <div class="hero-list__image">
@@ -70,7 +70,7 @@
   <div class="container">
     <div class="offer-feature">
       <h3 class="offer-feature__title header-title" id="price">Услуги и цены</h3>
-      <p class="offer-feature__subtitle header-description">Чаще всего, чтобы рассчитать стоимость ремонта нужен точный замер помещения, но вы можете ориентироваться на цены, указанные на сайте</p>
+      <p class="offer-feature__subtitle header-description">Чаще всего, чтобы рассчитать стоимость ремонта нужен точный замер помещения, но Вы можете ориентироваться на цены, указанные на сайте</p>
     </div>
     <div class="offer-block">
       <div class="offer-blocks">
@@ -80,13 +80,13 @@
         <div class="offer-block__description">
           <div class="offer-block__title">Косметический ремонт</div>
           <div class="offer-block__price">2 000 руб/м<sup>2</sup></div>
-          <div class="offer-block__subtitle">консультация специалиста <br>
-            поклейка стен обоями или покраска <br>
-            укладка покрытия на пол <br>
-            замена розеток и выключателей <br>
-            установка сантехники<br>
-            покраска потолков <br>
-            покраска труб, радиаторов </div>
+          <div class="offer-block__subtitle">- Консультация специалиста <br>
+            - Поклейка стен обоями или покраска <br>
+            - Укладка покрытия на пол <br>
+            - Замена розеток и выключателей <br>
+            - Установка сантехники<br>
+            - Покраска потолков <br>
+            - Покраска труб, радиаторов </div>
           <button class="offer-block__button button" data-popup='рассчитать стоимость'>Рассчитать стоимость</button>
         </div>
       </div>
@@ -97,13 +97,13 @@
         <div class="offer-block__description">
           <div class="offer-block__title">Капитальный ремонт</div>
           <div class="offer-block__price">4 000 руб/м<sup>2</sup></div>
-          <div class="offer-block__subtitle">косметический ремонт, плюс:<br>
-            выравнивание и шпатлевка стен<br>
-            выравнивание полов <br>
-            выравнивание потолков <br>
-            разводка электропроводки <br>
-            разводка сантехнических труб<br>
-            укладка плитки в санузлах <br>          
+          <div class="offer-block__subtitle">- Косметический ремонт, плюс:<br>
+            - Выравнивание и шпатлевка стен<br>
+            - Выравнивание полов <br>
+            - Выравнивание потолков <br>
+            - Разводка электропроводки <br>
+            - Разводка сантехнических труб<br>
+            - Укладка плитки в санузлах <br>          
           </div>
           <button class="offer-block__button button" data-popup='рассчитать стоимость'>Рассчитать стоимость</button>
       </div>
@@ -115,8 +115,8 @@
         <div class="offer-block__description">
           <div class="offer-block__title">Европейский ремонт</div>
           <div class="offer-block__price">6 000 руб/м<sup>2</sup></div>
-          <div class="offer-block__subtitle">капитальный ремонт, плюс: 
-            двухуровневые потолки из гипсокартона или натяжные устройство потолков в санузлах укладка паркетной доски и тд устройство теплых полов 
+          <div class="offer-block__subtitle">Капитальный ремонт, плюс: 
+            двухуровневые потолки из гипсокартона или натяжные устройство потолков в санузлах укладка паркетной доски и так далее, устройство теплых полов 
             укладка плитки в санузлах</div>
           <button class="offer-block__button button" data-popup='рассчитать стоимость'>Рассчитать стоимость</button>
         </div>
@@ -214,14 +214,14 @@
   <div class="container">
     <div class="profit-block">
       <h3 class="profit-block__title header-title">С нами выгодно работать</h3>
-      <div class="profit-block__subtitle header-description">Уверены, что вы сравниваете параллельно несколько компаний и выберите тех, кто предложит вам лучшие условия. Мы расскажем, почему вам стоит работать именно с нами.</div>
+      <div class="profit-block__subtitle header-description">Уверены, что Вы сравниваете параллельно несколько компаний и выберете тех, кто предложит вам лучшие условия. Мы расскажем, почему вам стоит работать именно с нами.</div>
     </div>
     <div class="profit-features">
       <div class="profit-features__icon">
         <div class="profit-features__icons"><img src="img/profit/money.svg" alt="Выгодные цены"></div>
         <div class="profit-features__description">
           <div class="profit-features__title">Выгодные цены</div>
-          <div class="profit-features__subtitle">Цены на ремонт начинаются от 1500 рублей за квадратный метр</div>
+          <div class="profit-features__subtitle">Цены на ремонт начинаются от 2000 рублей за квадратный метр</div>
         </div>
       </div>
       <div class="profit-features__icon">
@@ -397,15 +397,15 @@
     <div class="questions">
       <div class="questions-block">
         <h3 class="questions-block__title header-title">Частые вопросы клиентов</h3>
-        <div class="questions-block__subtitle header-description">Знаем, что на все вопросы не ответить на сайте, но возможно, мы уже знаем, о чем вы хотите спросить. Кликните на вопрос, чтобы раскрылся ответ на него.</div>
+        <div class="questions-block__subtitle header-description">Знаем, что на все вопросы не ответить на сайте, но возможно, мы уже знаем, о чем Вы хотите спросить. Кликните на вопрос, чтобы раскрылся ответ на него.</div>
       </div>
     </div>
     <div class="questions-answer open">
-      <div class="questions-answer__title">Как  быстро вы сможете рассчитать стоимость ремонта?</div>
-      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
+      <div class="questions-answer__title">Как  быстро Вы сможете рассчитать стоимость ремонта?</div>
+      <div class="questions-answer__subtitle">Обычно, чтобы рассчитать смету по ременту, нужны точные замеры. У нас это делает специальный человек — замерщик. Он приезжает на объект, делает замеры, заносит их в специальную программу и уже через 5 минут, после снятия всех замеров, он может озвучить конечную стоимость ремонта, включая стоимость материалов. Если где-то вам обещают назвать цену сразу после того, как Вы оставите заявку на сайте, будьте уверены, что эта цена поменяется несколько раз до заключения договора. А может и после договора ценник поползет вверх, будьте осторожны.</div>
     </div>
     <div class="questions-answer close">
-      <div class="questions-answer__title">Какие материалы вы используете для ремонта?</div>
+      <div class="questions-answer__title">Какие материалы Вы используете для ремонта?</div>
       <div class="questions-answer__subtitle">Мы используем быть экологичные, нетоксичные и безопасные для здоровья материалы. Поэтому мы применяем гипоаллергенные материалы. Выбираем материалы в зависимости от индивидуальных качеств клиента: у каждого заложен разный бюджет на ремонт.</div>
     </div>
     <div class="questions-answer close">
@@ -417,16 +417,16 @@
       <div class="questions-answer__subtitle">Можно воспользоваться услугами нашей организации в рассрочку. Вы оплачиваете часть от стоимости всех работ по факту выполненных работ, а вторую половину оформляете в рассрочку на четыре месяца без процентов и переплат!</div>
     </div>
     <div class="questions-answer close">
-      <div class="questions-answer__title">Что будет, если вы задержите срок сдачи квартиры?</div>
+      <div class="questions-answer__title">Что будет, если Вы задержите срок сдачи квартиры?</div>
       <div class="questions-answer__subtitle">Такого у нас никогда не было, но на всякий случай в договоре прописывается неустойка. За каждый просроченный день платим 0,5% в день от всей суммы ремонта.</div>
     </div>
     <div class="questions-answer close">
-      <div class="questions-answer__title">Как долго вы будете делать дизайн-проект ремонта?</div>
+      <div class="questions-answer__title">Как долго Вы будете делать дизайн-проект ремонта?</div>
       <div class="questions-answer__subtitle">Разработка дизайн-проекта осуществляется до начала ремонтных работ и занимает 2–3 месяца.</div>
     </div>
     <div class="questions-answer close">
       <div class="questions-answer__title">Можно ли посмотреть ваши текущие объекты ремонта?</div>
-      <div class="questions-answer__subtitle">Вы можете приехать на один из наших объектов и лично посмотреть процесс ремонта. Подробнее уточняйте по телефону. <a href="tel:74993981882">+7 499 398 18 82</a></div>
+      <div class="questions-answer__subtitle">Вы можете приехать на один из наших объектов и лично посмотреть процесс ремонта. Подробнее уточняйте по телефону. <a href="tel:+74993981882">+7 499 398 18 82</a></div>
     </div>
   </div>
 </div>
@@ -439,7 +439,7 @@
       </div>
       <div class="something-ask">
         <div class="something-ask__title header-title">Если остались вопросы</div>
-        <div class="something-ask__subtitle header-description">Оставьте нам свои контакты, мы перезвоним и ответим. Обещаем не забрасывать вас рекламными рассылками и спамом, если вдруг вы закажите ремонт не у нас. Мы уважаем вас.</div>
+        <div class="something-ask__subtitle header-description">Оставьте нам свои контакты, мы перезвоним и ответим. Обещаем не забрасывать вас рекламными рассылками и спамом, если вдруг Вы закажите ремонт не у нас. Мы уважаем вас.</div>
         <button class="something-ask__button button" data-popup='задать вопрос'>Задать вопрос</button>
       </div>
     </div>
@@ -448,9 +448,9 @@
 <section class="adress">
   <div class="adress-contacts">
     <div class="adress-contacts__title">Позвоните нам <br> или приходите в офис</div>
-    <div class="adress-contacts__location">Москва, Проспект Мира 64,<br> офис 205, 2 этаж налево</div>
+    <div class="adress-contacts__location">Москва, Проспект, Мира, 64,<br> офис 205, 2 этаж налево</div>
     <div class="adress-contacts__time">Режим работы в будни<br> с 9.00 до 20.00</div>
-    <div class="adress-contacts__telephone"><a href="tel:74993981882">8 499 398-18-82</a></div>
+    <div class="adress-contacts__telephone"><a href="tel:+74993981882">+7 499 398-18-82</a></div>
     <button class="adress-contacts__button button" data-popup='заказать звонок'>Заказать звонок</button>
   </div>
   <div class="adress-map">
@@ -466,7 +466,7 @@
       </div>
       <div class="footer__politics">
         <a href="#" class="footer__politics-url">Политика конфиденциальности</a></div>
-      <div class="footer__telephone"> <a href="tel:74993981882">+7 499 398 18 82</a></div>
+      <div class="footer__telephone"> <a href="tel:+74993981882">+7 499 398 18 82</a></div>
     </div>
   </div>
 </section>
